@@ -49,3 +49,4 @@ Version: V0.5B5 Date: Sat Feb 25 18:49:43 2006 +++++++++++++++++++++++++++++++
 + The dirty hack to create symlinks during installation has been removed.
 + set default tabwidth in editor to 4 char, can be changed in user settings
 + block comment/uncomment implemented
++ Undo/Redo of block comment or uncomment implemented
